Src/Newt/NewtonDynamics/Import/Newton.h

  #define dFloat double
  #define dFloat float
typedef struct NewtonMesh{} NewtonMesh;
typedef struct NewtonBody{} NewtonBody;
typedef struct NewtonWorld{} NewtonWorld;
typedef struct NewtonCollision{} NewtonCollision;
typedef struct NewtonSceneProxy{} NewtonSceneProxy;
typedef struct NewtonbreakableComponentMesh{} NewtonbreakableComponentMesh;
typedef struct NewtonBoxParam NewtonBoxParam;
typedef struct NewtonConeParam NewtonConeParam;
typedef struct NewtonSphereParam NewtonSphereParam;
typedef struct NewtonCapsuleParam NewtonCapsuleParam;
typedef struct NewtonCylinderParam NewtonCylinderParam;
typedef struct NewtonConvexHullParam NewtonConvexHullParam;
typedef struct NewtonCollisionTreeParam NewtonCollisionTreeParam;
typedef struct NewtonSceneCollisionParam NewtonSceneCollisionParam;
typedef struct NewtonChamferCylinderParam NewtonChamferCylinderParam;
typedef struct NewtonCompoundCollisionParam NewtonCompoundCollisionParam;
typedef struct NewtonConvexHullModifierParam NewtonConvexHullModifierParam;
typedef struct NewtonHeightFieldCollisionParam NewtonHeightFieldCollisionParam;
typedef struct NewtonCollisionInfoRecord NewtonCollisionInfoRecord;
struct NewtonBoxParam
{
  dFloat m_x;
  dFloat m_y;
  dFloat m_z;
};
struct NewtonSphereParam
{
  dFloat m_r0;
  dFloat m_r1;
  dFloat m_r2;
};
struct NewtonCylinderParam
{
  dFloat m_r0;
  dFloat m_r1;
  dFloat m_height;
};
struct NewtonCapsuleParam
{
  dFloat m_r0;
  dFloat m_r1;
  dFloat m_height;
};
struct NewtonConeParam
{
  dFloat m_r;
  dFloat m_height;
};
struct NewtonChamferCylinderParam
{
  dFloat m_r;
  dFloat m_height;
};
struct NewtonConvexHullParam
{
  int m_vertexCount;
  int m_vertexStrideInBytes;
  int m_faceCount;
  dFloat* m_vertex;
};
struct NewtonConvexHullModifierParam
{
  NewtonCollision* m_chidren;
};
struct NewtonCompoundCollisionParam
{
  int m_chidrenCount;
  NewtonCollision** m_chidren;
};
struct NewtonCollisionTreeParam
{
  int m_vertexCount;
  int m_indexCount;
};
struct NewtonHeightFieldCollisionParam
{
  int m_width;
  int m_height;
  int m_gridsDiagonals;
  dFloat m_horizonalScale;
  dFloat m_verticalScale;
  unsigned short *m_elevation;
  char *m_atributes;
};
struct NewtonSceneCollisionParam
{
  int m_childrenProxyCount;
};
struct NewtonCollisionInfoRecord
{
  dFloat m_offsetMatrix[4][4];
  int m_collisionType;				
  int m_referenceCount;				
  int m_collisionUserID;
  union {
    NewtonBoxParam m_box;
    NewtonConeParam m_cone;
    NewtonSphereParam m_sphere;
    NewtonCapsuleParam m_capsule;
    NewtonCylinderParam m_cylinder;
    NewtonChamferCylinderParam m_chamferCylinder;
    NewtonConvexHullParam m_convexHull;
    NewtonCompoundCollisionParam m_compoundCollision;
    NewtonConvexHullModifierParam m_convexHullModifier;
    NewtonCollisionTreeParam m_collisionTree;
    NewtonHeightFieldCollisionParam m_heightField;
    NewtonSceneCollisionParam m_sceneCollision;
    dFloat m_paramArray[64];		    
  };
};
typedef struct NewtonUserMeshCollisionRayHitDesc NewtonUserMeshCollisionRayHitDesc;
typedef struct NewtonUserMeshCollisionCollideDesc NewtonUserMeshCollisionCollideDesc;
struct NewtonUserMeshCollisionCollideDesc
{
  dFloat m_boxP0[4];						
  dFloat m_boxP1[4];						
  int m_threadNumber;						
  int	m_faceCount;                        
  int m_vertexStrideInBytes;              
  void* m_userData;                       
  dFloat* m_vertex;                       
   int* m_userAttribute;                   
  int* m_faceIndexCount;                  
  int* m_faceVertexIndex;                 
  NewtonBody* m_objBody;                  
  NewtonBody* m_polySoupBody;             
};
struct NewtonUserMeshCollisionRayHitDesc
{
  dFloat m_p0[4];							
  dFloat m_p1[4];                         
  dFloat m_normalOut[4];					
  int m_userIdOut;                        
  void* m_userData;                       
};
typedef void (*NewtonSerialize) (void* const serializeHandle, const void* buffer, int size);
typedef void (*NewtonDeserialize) (void* const serializeHandle, void* buffer, int size);
typedef void (*NewtonUserMeshCollisionDestroyCallback) (void* const userData);
typedef void (*NewtonUserMeshCollisionCollideCallback) (NewtonUserMeshCollisionCollideDesc* const collideDescData);
typedef dFloat (*NewtonUserMeshCollisionRayHitCallback) (NewtonUserMeshCollisionRayHitDesc* const lineDescData);
typedef void (*NewtonUserMeshCollisionGetCollisionInfo) (void* const userData, NewtonCollisionInfoRecord* const infoRecord);
typedef int (*NewtonUserMeshCollisionGetFacesInAABB) (void* const userData, const dFloat* const p0, const dFloat* const p1,
                            const dFloat** const vertexArray, int* const vertexCount, int* const vertexStrideInBytes,
                            const int* const indexList, int maxIndexCount, const int* const userDataList);
typedef dFloat (*NewtonCollisionTreeRayCastCallback) (const NewtonBody* const body, const NewtonCollision* const treeCollision, dFloat interception, dFloat* normal, int faceId, void* usedData);
typedef dFloat (*NewtonHeightFieldRayCastCallback) (const NewtonBody* const body, const NewtonCollision* const heightFieldCollision, dFloat interception, int row, int col, dFloat* normal, int faceId, void* usedData);
typedef void (*NewtonTreeCollisionCallback) (const NewtonBody* const bodyWithTreeCollision, const NewtonBody* const body, int faceID,
                       int vertexCount, const dFloat* const vertex, int vertexStrideInBytes);
typedef int (*NewtonCollisionCompoundBreakableCallback) (NewtonMesh* const mesh, void* const userData, dFloat* const planeMatrixOut);
NEWTON_API NewtonCollision* NewtonCreateCompoundCollision (const NewtonWorld* const newtonWorld, int count, NewtonCollision* const collisionPrimitiveArray[], int shapeID);
NEWTON_API NewtonCollision* NewtonCreateCompoundCollisionFromMesh (const NewtonWorld* const newtonWorld, const NewtonMesh* const mesh, dFloat hullTolerance, int shapeID, int subShapeID);
NEWTON_API NewtonCollision* NewtonCreateCompoundBreakable (const NewtonWorld* const newtonWorld, int meshCount,
                               const NewtonMesh** const solids, const int* const shapeIDArray,
                               const dFloat* const densities, const int* const internalFaceMaterial,
                               int shapeID, int debriID, dFloat debriSeparationGap);
NEWTON_API void NewtonCompoundBreakableResetAnchoredPieces (const NewtonCollision* const compoundBreakable);
NEWTON_API void NewtonCompoundBreakableSetAnchoredPieces (const NewtonCollision* const compoundBreakable, int fixShapesCount, dFloat* const matrixPallete, NewtonCollision** const fixedShapesArray);
NEWTON_API int NewtonCompoundBreakableGetVertexCount (const NewtonCollision* const compoundBreakable);
NEWTON_API void NewtonCompoundBreakableGetVertexStreams (const NewtonCollision* const compoundBreakable, int vertexStrideInByte, dFloat* const vertex,
                             int normalStrideInByte, dFloat* const normal,	int uvStrideInByte, dFloat* const uv);
NEWTON_API NewtonbreakableComponentMesh* NewtonBreakableGetMainMesh (const NewtonCollision* const compoundBreakable);
NEWTON_API NewtonbreakableComponentMesh* NewtonBreakableGetFirstComponent (const NewtonCollision* const compoundBreakable);
NEWTON_API NewtonbreakableComponentMesh* NewtonBreakableGetNextComponent (const NewtonbreakableComponentMesh* const component);
NEWTON_API void NewtonBreakableBeginDelete (const NewtonCollision* const compoundBreakable);
NEWTON_API NewtonBody* NewtonBreakableCreateDebrieBody (const NewtonCollision* const compoundBreakable, const NewtonbreakableComponentMesh* const component);
NEWTON_API void NewtonBreakableDeleteComponent (const NewtonCollision* const compoundBreakable, const NewtonbreakableComponentMesh* const component);
NEWTON_API void NewtonBreakableEndDelete (const NewtonCollision* const compoundBreakable);
NEWTON_API int NewtonBreakableGetComponentsInRadius (const NewtonCollision* const compoundBreakable, const dFloat* position, dFloat radius, NewtonbreakableComponentMesh** const segments, int maxCount);
NEWTON_API void* NewtonBreakableGetFirstSegment (const NewtonbreakableComponentMesh* const breakableComponent);
NEWTON_API void* NewtonBreakableGetNextSegment (const void* const segment);
NEWTON_API int NewtonBreakableSegmentGetMaterial (const void* const segment);
NEWTON_API int NewtonBreakableSegmentGetIndexCount (const void* const segment);
NEWTON_API int NewtonBreakableSegmentGetIndexStream (const NewtonCollision* const compoundBreakable, const NewtonbreakableComponentMesh* const meshOwner, const void* const segment, int* const index);
NEWTON_API int NewtonBreakableSegmentGetIndexStreamShort (const NewtonCollision* const compoundBreakable, const NewtonbreakableComponentMesh* const meshOwner, const void* const segment, short int* const index);
NEWTON_API NewtonCollision* NewtonCreateUserMeshCollision (const NewtonWorld* const newtonWorld, const dFloat* const minBox,
                               const dFloat* const maxBox, void* const userData, NewtonUserMeshCollisionCollideCallback collideCallback,
                               NewtonUserMeshCollisionRayHitCallback rayHitCallback, NewtonUserMeshCollisionDestroyCallback destroyCallback,
                               NewtonUserMeshCollisionGetCollisionInfo getInfoCallback, NewtonUserMeshCollisionGetFacesInAABB facesInAABBCallback, int shapeID);
NEWTON_API NewtonCollision* NewtonCreateSceneCollision (const NewtonWorld* const newtonWorld, int shapeID);
NEWTON_API NewtonSceneProxy* NewtonSceneCollisionCreateProxy (NewtonCollision* const scene, NewtonCollision* const collision, const dFloat* const matrix);
NEWTON_API void NewtonSceneCollisionDestroyProxy (NewtonCollision* const scene, NewtonSceneProxy* Proxy);
NEWTON_API void NewtonSceneProxySetMatrix (NewtonSceneProxy* const proxy, const dFloat* matrix);
NEWTON_API void NewtonSceneProxyGetMatrix (NewtonSceneProxy* const proxy, dFloat* matrix);
NEWTON_API void NewtonSceneSetProxyUserData (NewtonSceneProxy* const proxy, void* userData);
NEWTON_API void* NewtonSceneGetProxyUserData (NewtonSceneProxy* const proxy);
NEWTON_API NewtonSceneProxy* NewtonSceneGetFirstProxy (NewtonCollision* const scene);
NEWTON_API NewtonSceneProxy* NewtonSceneGetNextProxy (NewtonCollision* const scene, NewtonSceneProxy* const proxy);
NEWTON_API void NewtonSceneCollisionOptimize (NewtonCollision* scene);
NEWTON_API NewtonCollision* NewtonCreateCollisionFromSerialization (const NewtonWorld* const newtonWorld, NewtonDeserialize deserializeFunction, void* const serializeHandle);
NEWTON_API void NewtonCollisionSerialize (const NewtonWorld* const newtonWorld, const NewtonCollision* const collision, NewtonSerialize serializeFunction, void* const serializeHandle);
NEWTON_API void NewtonCollisionGetInfo (const NewtonCollision* const collision, NewtonCollisionInfoRecord* const collisionInfo);
NEWTON_API NewtonCollision* NewtonCreateHeightFieldCollision (const NewtonWorld* const newtonWorld, int width, int height, int gridsDiagonals,
                                const unsigned short* const elevationMap, const char* const attributeMap,
                                dFloat horizontalScale, dFloat verticalScale, int shapeID);
NEWTON_API void NewtonHeightFieldSetUserRayCastCallback (const NewtonCollision* const treeCollision, NewtonHeightFieldRayCastCallback rayHitCallback);
NEWTON_API NewtonCollision* NewtonCreateTreeCollision (const NewtonWorld* const newtonWorld, int shapeID);
NEWTON_API void NewtonTreeCollisionSetUserRayCastCallback (const NewtonCollision* const treeCollision, NewtonCollisionTreeRayCastCallback rayHitCallback);
NEWTON_API void NewtonTreeCollisionBeginBuild (const NewtonCollision* treeCollision);
NEWTON_API void NewtonTreeCollisionAddFace (const NewtonCollision* const treeCollision, int vertexCount, const dFloat* const vertexPtr, int strideInBytes, int faceAttribute);
NEWTON_API void NewtonTreeCollisionEndBuild (const NewtonCollision* const treeCollision, int optimize);
NEWTON_API int NewtonTreeCollisionGetFaceAtribute (const NewtonCollision* const treeCollision, const int* const faceIndexArray);
NEWTON_API void NewtonTreeCollisionSetFaceAtribute (const NewtonCollision* const treeCollision, const int* const faceIndexArray, int attribute);
NEWTON_API int NewtonTreeCollisionGetVertexListIndexListInAABB (const NewtonCollision* const treeCollision, const dFloat* const p0, const dFloat* const p1, const dFloat** const vertexArray, int* const vertexCount, int* const vertexStrideInBytes, const int* const indexList, int maxIndexCount, const int* const faceAttribute);
NEWTON_API void NewtonStaticCollisionSetDebugCallback (const NewtonCollision* const staticCollision, NewtonTreeCollisionCallback userCallback);