Src/Newt/NewtonDynamics/Import/DllImports.cs


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonCreateCompoundCollision(IntPtr newtonWorld, int count, [MarshalAs(UnmanagedType.LPArray/*, SizeConst = 3*/)]IntPtr[] collisionPrimitiveArray, int shapeID);
		//internal static extern IntPtr NewtonCreateCompoundCollisionFromMesh (IntPtr newtonWorld, IntPtr mesh, dFloat concavity, int shapeID, int subShapeID);
		//internal static extern IntPtr NewtonCreateCompoundCollisionFromMesh(IntPtr newtonWorld, IntPtr mesh, int maxSubShapesCount, int shapeID, int subShapeID);

		#endregion
		#region complex breakable collision primitives interface

		//NOTE:  The breakable collision isn't finalized

		//	internal static extern IntPtr NewtonCreateCompoundBreakable (IntPtr newtonWorld, int meshCount, 
		//															   NewtonMesh* const solids[], NewtonMesh* const splitePlanes[], 
		//															   dFloat* const matrixPallete, int* const shapeIDArray, dFloat* const densities,
		//															   int shapeID, int debriID, NewtonCollisionCompoundBreakableCallback callback, void* buildUsedData);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonCreateCompoundBreakable(IntPtr newtonWorld, int meshCount, IntPtr solids, [MarshalAs(UnmanagedType.LPArray/*, SizeConst = 3*/)]int[] shapeIDArray, [MarshalAs(UnmanagedType.LPArray/*, SizeConst = 3*/)]float[] densities, [MarshalAs(UnmanagedType.LPArray/*, SizeConst = 3*/)]int[] internalFaceMaterial, int shapeID, int debriID, float debriSeparationGap);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonCompoundBreakableResetAnchoredPieces(IntPtr compoundBreakable);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonCompoundBreakableSetAnchoredPieces(IntPtr compoundBreakable, int fixShapesCount, [MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] matrixPallete, IntPtr fixedShapesArray);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonCompoundBreakableGetVertexCount(IntPtr compoundBreakable);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonCompoundBreakableGetVertexStreams(IntPtr compoundBreakable, int vertexStrideInByte, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] vertex, int normalStrideInByte, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] normal, int uvStrideInByte, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] uv);		//	not sure what uv is


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonBreakableGetMainMesh(IntPtr compoundBreakable);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonBreakableGetFirstComponent(IntPtr compoundBreakable);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonBreakableGetNextComponent(IntPtr component);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBreakableBeginDelete(IntPtr compoundBreakable);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonBreakableCreateDebrieBody(IntPtr compoundBreakable, IntPtr component);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBreakableDeleteComponent(IntPtr compoundBreakable, IntPtr component);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBreakableEndDelete(IntPtr compoundBreakable);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonBreakableGetComponentsInRadius(IntPtr compoundBreakable, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] position, float radius, IntPtr segments, int maxCount);		//	segments is another double pointer


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonBreakableGetFirstSegment(IntPtr breakableComponent);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonBreakableGetNextSegment(IntPtr segment);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonBreakableSegmentGetMaterial(IntPtr segment);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonBreakableSegmentGetIndexCount(IntPtr segment);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonBreakableSegmentGetIndexStream(IntPtr compoundBreakable, IntPtr meshOwner, IntPtr segment, [MarshalAs(UnmanagedType.LPArray/*, SizeConst = 3*/)]int[] index);		//	int* const index (not sure what index is supposed to be)

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonBreakableSegmentGetIndexStreamShort(IntPtr compoundBreakable, IntPtr meshOwner, IntPtr segment, [MarshalAs(UnmanagedType.LPArray/*, SizeConst = 3*/)]Int16[] index);		//	short int* const index

		//	TODO:  Fix the NewtonCollisionInfoRecord struct, then the delegates, then this will work (but it doesn't seem like I'll ever need it)
		//internal static extern IntPtr NewtonCreateUserMeshCollision (IntPtr newtonWorld, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] minBox, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] maxBox, IntPtr userData, NewtonUserMeshCollisionCollideCallback collideCallback, NewtonUserMeshCollisionRayHitCallback rayHitCallback, NewtonUserMeshCollisionDestroyCallback destroyCallback, NewtonUserMeshCollisionGetCollisionInfo getInfoCallback, NewtonUserMeshCollisionGetFacesInAABB facesInAABBCallback, int shapeID);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonCreateSceneCollision(IntPtr newtonWorld, int shapeID);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonSceneCollisionCreateProxy(IntPtr scene, IntPtr collision, [MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] matrix);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonSceneCollisionDestroyProxy(IntPtr scene, IntPtr Proxy);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonSceneProxySetMatrix(IntPtr proxy, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] matrix);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonSceneProxyGetMatrix(IntPtr proxy, [MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] matrix);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonSceneSetProxyUserData(IntPtr proxy, IntPtr userData);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonSceneGetProxyUserData(IntPtr proxy);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonSceneGetFirstProxy(IntPtr scene);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonSceneGetNextProxy(IntPtr scene, IntPtr proxy);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonSceneCollisionOptimize(IntPtr scene);

		#endregion
		#region Collision serialization functions

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonCreateCollisionFromSerialization(IntPtr newtonWorld, NewtonDeserialize deserializeFunction, IntPtr serializeHandle);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonCollisionSerialize(IntPtr newtonWorld, IntPtr collision, NewtonSerialize serializeFunction, IntPtr serializeHandle);

		//TODO:  Fix NewtonCollisionInfoRecord first
		//internal static extern void NewtonCollisionGetInfo (IntPtr collision, NewtonCollisionInfoRecord* const collisionInfo);

		#endregion
		#region Static collision shapes functions

		//NOTE:  The .h file uses char[] for the attributeMap, but I believe byte is the better datatype (unless I'm mistaken, these are material ID's for each grid point, so
		//	you can define different elasticities for different parts of your terrain)
		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonCreateHeightFieldCollision(IntPtr newtonWorld, int width, int height, int gridsDiagonals, [MarshalAs(UnmanagedType.LPArray/*, SizeConst = */)]short[] elevationMap, [MarshalAs(UnmanagedType.LPArray/*, SizeConst = */)]byte[] attributeMap, float horizontalScale, float verticalScale, int shapeID);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonHeightFieldSetUserRayCastCallback(IntPtr treeCollision, NewtonHeightFieldRayCastCallback rayHitCallback);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonCreateTreeCollision(IntPtr newtonWorld, int shapeID);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonTreeCollisionSetUserRayCastCallback(IntPtr treeCollision, NewtonCollisionTreeRayCastCallback rayHitCallback);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonTreeCollisionBeginBuild(IntPtr treeCollision);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonTreeCollisionAddFace(IntPtr treeCollision, int vertexCount, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] vertexPtr, int strideInBytes, int faceAttribute);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonTreeCollisionEndBuild(IntPtr treeCollision, int optimize);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonTreeCollisionGetFaceAtribute(IntPtr treeCollision, [MarshalAs(UnmanagedType.LPArray/*, SizeConst = */)]int[] faceIndexArray);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonTreeCollisionSetFaceAtribute(IntPtr treeCollision, [MarshalAs(UnmanagedType.LPArray/*, SizeConst = */)]int[] faceIndexArray, int attribute);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonTreeCollisionGetVertexListIndexListInAABB(IntPtr treeCollision, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] p0, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] p1, [MarshalAs(UnmanagedType.LPArray/*, SizeConst = 3*/)]float[,] vertexArray, [MarshalAs(UnmanagedType.LPArray/*, SizeConst = */)]int[] vertexCount, [MarshalAs(UnmanagedType.LPArray/*, SizeConst = */)]int[] vertexStrideInBytes, [MarshalAs(UnmanagedType.LPArray/*, SizeConst = */)]int[] indexList, int maxIndexCount, [MarshalAs(UnmanagedType.LPArray/*, SizeConst = */)]int[] faceAttribute);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonStaticCollisionSetDebugCallback(IntPtr staticCollision, NewtonTreeCollisionCallback userCallback);

		#endregion
		#region General purpose collision library functions
